--- a/css/temp.css
+++ b/css/temp.css
@@ -30,3 +30,9 @@
      font-size: 30px;
      text-align: center;
      }
+     .mahal2{
+        color:#5e4b4b;
+         font-family: 'Alice', serif;
+         font-size: 20px;
+         text-align: center;
+         }
